attempting to fix page jump

--- a/IntroducePets/styles.css
+++ b/IntroducePets/styles.css
@@ -29,9 +29,11 @@ img {
   height: auto;
 }
 .hide {
+    position: fixed;
 	display: none ;
 }
 
 .hide:target {
+    position: fixed;
 	display: block ;
 }
